refactor(team): team response 수정 & 최근 전적 schedule에서 가져오도록 수정